@@ -23,3 +23,4 @@ obj-y := arch.o initialize.o serial.o timer.o env.o cpuinfo.o
 obj-$(CONFIG_CLCDC)		+= clcdc.o
 obj-$(CONFIG_CODEC)		+= codec.o
 obj-$(CONFIG_ADC)		+= adc.o
+obj-y				+= cmd-reset.o
